various code cleanup, WIP readme updates